--- a/blog/layouts/partials/navbar.html
+++ b/blog/layouts/partials/navbar.html
@@ -18,7 +18,7 @@
     <a href="/">
         <div class="logo">
             <canvas id="logoCanvas"></canvas>
-            <div class="logoText">PRACHT</div>
+            <div class="logoText">ELKE</div>
         </div>
     </a>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
