--- a/blog/layouts/_default/single.html
+++ b/blog/layouts/_default/single.html
@@ -22,7 +22,7 @@
             {{ end }}
         </div>
         <div class="articleImageBox">
-            <img class="articleImage" src={{.Params.image}} loading="lazy" alt={{.Params.alt}}>
+            <img class="articleImage" src="/images/{{.Params.slug}}.webp" loading="lazy" alt="">
         </div>
         <div class="articleHead">
             <div class="articleHeadContainer">
