--- a/blog/layouts/_default/baseof.html
+++ b/blog/layouts/_default/baseof.html
@@ -3,11 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content={{or .Params.subtitle .Site.Params.description }}>
+    <meta name="description" content="{{or .Params.subtitle .Site.Params.description }}">
     <meta http-equiv="Content-Language" content="de,en">
-    <link rel="stylesheet" href="/styles/style.css">
     <title>{{ .Title }}</title>
     <link rel="icon" href="/favicon.svg" sizes="any" type="image/svg+xml">
+    <style>
+        /* Inline critical CSS here */
+        /* Copy the most important styles from your CSS file */
+        body {
+            font-size: 19px;
+            background: var(--b);
+            color: var(--t);
+            font-family: "Fira Mono", monospace;
+            letter-spacing: -0.6px;
+            word-spacing: -4px;
+            line-height: 117%;
+        }
+        /* Add more critical styles here */
+    </style>
+    <link rel="preload" href="/styles/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="/styles/style.css"></noscript>
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500;700&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500;700&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"></noscript>
+    <script>
+        // Inline small JavaScript here
+        // This script handles font loading
+        (function() {
+            var wf = document.createElement('script');
+            wf.src = 'https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js';
+            wf.type = 'text/javascript';
+            wf.async = 'true';
+            var s = document.getElementsByTagName('script')[0];
+            s.parentNode.insertBefore(wf, s);
+        })();
+    </script>
 </head>
 <body>
     <div class="container">
@@ -15,5 +44,7 @@
         {{ block "main" . }} {{ end }}
         {{ partial "footer" . }}
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js" defer></script>
+    <script src="/js/logo-shader.js" defer></script>
 </body>
 </html>
