--- a/blogv2/public/styles/style.css
+++ b/blogv2/public/styles/style.css
@@ -62,14 +62,14 @@ body {
 }
 
 .site-container {
-    padding: 25px;
-    max-width: 825px;
+    padding: 20px;
+    max-width: 800px;
     margin: auto;
 }
 
 .content {
-    padding-top: 25px;
-    padding-bottom: 25px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 /* - - - - - - - - - - - - - - - - - - - - - */
@@ -104,7 +104,7 @@ body {
 .nav-link:hover,
 .nav-link:focus,
 .nav-link:visited {
-    color: var(--purple);
+    color: var(--black);
 }
 
 .navbar-date-container {
