--- a/blogv2/layouts/_default/baseof.html
+++ b/blogv2/layouts/_default/baseof.html
@@ -1,50 +1,249 @@
 <!DOCTYPE html>
-<html lang="de">
-
+<html lang="de" class="no-js">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="{{or .Params.subtitle .Site.Params.description }}">
     <meta http-equiv="Content-Language" content="de">
     <meta name="color-scheme" content="light">
     <title>{{ .Title }}</title>
 
+    <link rel="preload" href="/fonts/fira-sans-v17-latin-regular.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/fonts/fira-sans-v17-latin-500.woff2" as="font" type="font/woff2" crossorigin>
+    
     <style>
         @font-face {
-            font-display: swap;
             font-family: 'Fira Mono';
             font-style: normal;
             font-weight: 500;
-            src: url('../fonts/fira-mono-v14-latin-500.woff2') format('woff2');
+            src: url('/fonts/fira-mono-v14-latin-500.woff2') format('woff2');
+            font-display: optional;
         }
-
+        
         @font-face {
-            font-display: swap;
             font-family: 'Fira Sans';
             font-style: normal;
             font-weight: 400;
-            src: url('../fonts/fira-sans-v17-latin-regular.woff2') format('woff2');
+            src: url('/fonts/fira-sans-v17-latin-regular.woff2') format('woff2');
+            font-display: optional;
         }
-
+        
         @font-face {
-            font-display: swap;
             font-family: 'Fira Sans';
             font-style: normal;
             font-weight: 500;
-            src: url('../fonts/fira-sans-v17-latin-500.woff2') format('woff2');
+            src: url('/fonts/fira-sans-v17-latin-500.woff2') format('woff2');
+            font-display: optional;
         }
-
+        
         @font-face {
-            font-display: swap;
             font-family: 'Fira Sans';
             font-style: normal;
             font-weight: 700;
-            src: url('../fonts/fira-sans-v17-latin-700.woff2') format('woff2');
+            src: url('/fonts/fira-sans-v17-latin-700.woff2') format('woff2');
+            font-display: optional;
         }
+
+        .no-js { visibility: hidden; }
+        .fonts-loaded { visibility: visible; }
+
+        /* - - - - - - - - - - - - - - - - - - - - - */
+        /*               normalization               */
+
+        *,
+        *::before,
+        *::after {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        html,
+        body {
+            height: 100%;
+        }
+
+        body {
+            text-rendering: optimizeLegibility;
+            -webkit-font-smoothing: antialiased;
+        }
+
+        a,
+        a:visited,
+        a:focus,
+        a:hover,
+        a:active {
+            text-decoration: none;
+            color: inherit;
+        }
+
+        ul,
+        ol {
+            list-style: none;
+        }
+
+        img {
+            max-width: 100%;
+            height: auto;
+        }
+
+        /* - - - - - - - - - - - - - - - - - - - - - */
+        /*                   colors                  */
+
+        :root {
+            --grey: #777777;
+            --purple: #CC00AA;
+            --white: #FEFCFA;
+            --off-white: #EEECEA;
+            --black: #000000;
+        }
+
+        /* - - - - - - - - - - - - - - - - - - - - - */
+        /*                   baseof                  */
+
+        body {
+            background: var(--white);
+            font-family: "Fira Sans", sans-serif;
+            font-optical-sizing: none;
+            font-weight: 400;
+            line-height: 16px;
+            color: var(--black);
+        }
+
+        .site-container {
+            padding: 20px;
+            max-width: 800px;
+            margin: auto;
+        }
+
+        .content {
+            padding-top: 20px;
+            padding-bottom: 20px;
+        }
+
+        /* - - - - - - - - - - - - - - - - - - - - - */
+        /*              navbar & footer              */
+
+        .nav-container {
+            background: var(--off-white);
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            gap: 25px;
+            padding: 2.5px;
+            padding-right: 5px;
+            min-height: 25px;
+        }
+
+        .nav-link-container {
+            display: flex;
+            gap: 7.5px;
+        }
+
+        .nav-link {
+            font-size: 16px;
+            font-weight: 500;
+            line-height: 20px;
+            font-family: "Fira Mono", monospace;
+            letter-spacing: -0.75px;
+        }
+
+        .nav-link,
+        .nav-link:active,
+        .nav-link:hover,
+        .nav-link:focus,
+        .nav-link:visited {
+            color: var(--black);
+        }
+
+        .navbar-date-container {
+            display: flex;
+            align-items: center;
+            gap: 5px;
+            font-size: 12px;
+            font-family: Helvetica, sans-serif;
+            letter-spacing: normal;
+            word-spacing: normal;
+            line-height: normal;
+            line-height: 20px;
+        }
+
+        .navbar-logo-wrapper {
+            background: var(--purple);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 7.5px;
+        }
+
+        /* - - - - - - - - - - - - - - - - - - - - - */
+        /*                article list               */
+
+        .article-list {
+            display: flex;
+            flex-direction: column;
+        }
+
+        .article-list-item {
+            position: relative;
+            padding: 12.5px 0;
+        }
+
+        .article-list-item.first-item {
+            padding-top: 0;
+        }
+
+        .article-list-item.last-item {
+            padding-bottom: 0;
+        }
+
+        .article-list-item:not(.last-item)::after {
+            content: '';
+            position: absolute;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            height: 1px;
+            background: var(--off-white);
+        }
+
+        .article-banner-container {
+            display: flex;
+            flex-direction: column;
+            gap: 7.5px;
+        }
+
+        .article-title {
+            font-size: 20px;
+            font-weight: 700;
+        }
+
+        .article-subtitle {
+            font-size: 16px;
+            font-weight: 500;
+            color: var(--grey);
+        }
+        
     </style>
 
-    <link rel="icon" href="/favicon.svg" sizes="any" type="image/svg+xml">
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="/styles/style.css" media="print" onload="this.media='all'">
+    
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml" sizes="any">
+    <link rel="manifest" href="/site.webmanifest">
+    
+    <script>
+        if ("fonts" in document) {
+            Promise.all([
+                document.fonts.load("400 1em 'Fira Sans'"),
+                document.fonts.load("500 1em 'Fira Sans'"),
+                document.fonts.load("700 1em 'Fira Sans'"),
+                document.fonts.load("500 1em 'Fira Mono'")
+            ]).then(() => {
+                document.documentElement.classList.add('fonts-loaded');
+                sessionStorage.setItem('fonts-loaded', 'true');
+            });
+        }
+    </script>
 </head>
 
 <body>
@@ -56,5 +255,4 @@
         {{ partial "footer" . }}
     </div>
 </body>
-
 </html>
