--- a/blogv2/layouts/_default/baseof.html
+++ b/blogv2/layouts/_default/baseof.html
@@ -18,7 +18,7 @@
             font-style: normal;
             font-weight: 500;
             src: url('/fonts/fira-mono-v14-latin-500.woff2') format('woff2');
-            font-display: optional;
+            font-display: swap;
         }
 
         @font-face {
@@ -26,7 +26,7 @@
             font-style: normal;
             font-weight: 400;
             src: url('/fonts/fira-sans-v17-latin-regular.woff2') format('woff2');
-            font-display: optional;
+            font-display: swap;
         }
 
         @font-face {
@@ -34,7 +34,7 @@
             font-style: normal;
             font-weight: 700;
             src: url('/fonts/fira-sans-v17-latin-700.woff2') format('woff2');
-            font-display: optional;
+            font-display: swap;
         }
 
         .no-js {
